--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "llvm-project"]
-  path = llvm-project
-  url = https://github.com/CTSRD-CHERI/llvm-project.git
+	path = llvm-project
+	url = https://github.com/CTSRD-CHERI/llvm-project.git
+	branch = cheri-riscv
